--- a/index.html
+++ b/index.html
@@ -50,10 +50,127 @@
         class="max-w-7xl md:flex md:items-center justify-between mx-auto pt-20 pb-20 gap-40"
       >
         <div class="lg:w-1/2">
-          <p class="text-7xl uppercase font-bold font-bebas-neue"></p>
+          <p class="text-7xl uppercase font-bold font-bebas-neue">
+            <span class="text-orange-300">Be The Penguins</span><br />
+            <span class="text-stone-500">of winter</span>
+          </p>
+          <p class="mt-5 mb-5">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
+            voluptates repellat ea aut, eveniet facilis sapiente recusandae vel,
+            odit delectus deleniti debitis incidunt? Enim aliquam id blanditiis.
+            Neque, quaerat cum!
+          </p>
+          <button
+            class="flex gap-2 bg-green-300 py-4 px-8 rounded-xl text-white font-medium bg-gradient-to-to-r from-[#A4BC46] to-[#85A019]"
+          >
+            <svg
+              xmlns="http://www.w3.org/200/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="size-6 text-white"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
+              />
+            </svg>
+            Buy Now
+          </button>
+        </div>
+        <div class="flex justify-center lg:w-1/2">
+          <img src="./images/model.png" alt="model pic" />
         </div>
       </div>
     </header>
+    <main class="max-w-7xl max-auto">
+      <!-- Women Jacket Section -->
+      <section class="my-32 sm:mx-10 lg:mx-0">
+        <h3 class="text-5xl font-bebas-neue uppercase text-[#363958]">
+          Women Jacket
+        </h3>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+          <!-- Jacket Card-1 -->
+          <div class="p-5 rounded-3xl space-y-4 shadow-lg">
+            <img
+              class="rounded-3xl p-5 bg-[#f1f1f1]"
+              src="./images/jacket-1.png"
+              alt="jacket pic"
+            />
+            <p class="text-2xl font-bold">Yellow coat Jacket</p>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores,
+              culpa, vel velit ullam ipsum animi magnam nemo aspernatur eligendi
+              dolor rem iste cum, sunt natus. Omnis deleniti fugiat veniam
+              deserunt!
+            </p>
+            <div class="flex items-center justify-between">
+              <p class="text-[#FABE4c] text-4xl font-black">$234</p>
+              <button
+                class="flex gap-2 bg-green-300 py-4 px-8 rounded-xl text-white font-medium bg-gradient-to-r from-[#A4BC46] to-[#85A019]"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-6 text-white"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
+                  />
+                </svg>
+
+                Buy Now
+              </button>
+            </div>
+          </div>
+          <!-- Jacket Card - 2 -->
+          <div
+            class="p-5 rounded-3xl spacy-y-4 bg-[#f1f1f1]"
+            src="./images/jacket-2.png"
+            alt="jacket pic"
+          />
+          <p class="text-2xl font-bold">Ladies Jacket</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro illo
+            nam rerum id reiciendis enim necessitatibus facere magni velit quam
+            voluptate dolore debitis dolores repellendus fuga alias odio,
+            maiores molestiae.
+          </p>
+          <div class="flex items-center justify-between">
+            <p class="text-[#FABE4c] text-4xl font-black">$234</p>
+            <button
+              class="flex gap-2 bg-green-300 py-4 px-8 rounded-xl text-white font-medium bg-gradient-to-r from-[#A4BC46] to-[#85A019]"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="size-6 text-white"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
+                />
+              </svg>
+
+              Buy Now
+            </button>
+          </div>
+          </div>
+          
+        </div>
+      </section>
+    </main>
   </body>
   <body></body>
 </html>
