--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header class="bg-[#FFFBF0] pl-4">
       <!-- Navbar start -->
       <nav
-        class="lg:flex items-center justify-between gap-10 max-w-7xl mx-auto pt-10 pb-10 bg-[url('/images/nav-bg.svg')] bg-no-repeat bg-[30%_0%]"
+        class="lg:flex items-center justify-between gap-10 max-w-7xl mx-auto pt-10 pb-10 bg-[url(./images/nav-bg-.svg)] bg-no-repeat bg-[30%_0%]"
       >
         <div>
           <img class="w-60" src="./icons/logo.png" alt="logo" />
@@ -61,10 +61,10 @@
             Neque, quaerat cum!
           </p>
           <button
-            class="flex gap-2 bg-green-300 py-4 px-8 rounded-xl text-white font-medium bg-gradient-to-to-r from-[#A4BC46] to-[#85A019]"
+            class="flex gap-2 bg-green-300 py-4 px-8 rounded-xl text-white font-medium bg-gradient-to-r from-[#A4BC46] to-[#85A019]"
           >
             <svg
-              xmlns="http://www.w3.org/200/svg"
+              xmlns="http://www.w3.org/2000/svg"
               fill="none"
               viewBox="0 0 24 24"
               stroke-width="1.5"
@@ -167,10 +167,215 @@
             </button>
           </div>
           </div>
-          
+          <!-- Jacket Card -3 -->
+           <div class="p-5 rounded-3xl space-y-4 shadow-lg">
+            <img
+            class="rounded-3xl p-5 bg-[#f1f1f1]"
+            src="./images/jacket-3.png"
+            alt="jacket pic"
+            />
+            <p class="text-2xl font-bold">Woman Leather Jacket</p>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+            <div class="flex items-center justify-between">
+              <p class="text-[#FABE4C] text-4xl font-black">$234</p>
+              <button
+                class="flex gap-2 bg-green-300 py-4 px-8 rounded-xl text-white font-medium bg-gradient-to-r from-[#A4BC46] to-[#85A019]"
+                >
+                <svg
+                xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-6 text-white"
+                >
+                <path
+                stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
+                  />
+                </svg>
+
+                Buy Now
+              </button>
+           </div>
+        </div>
+      </div>
+      </section>
+      <!-- Main Jacket Section -->
+       <section class="my-32 sm:mx-10 md:ms-10 lg:mx-10">
+        <section class="my-32 sm:mx-10 md:mx-10 lg:mx-0">
+        <h3 class="text-5xl font-bebas-neue uppercase text-[#363958]">
+          Man Jacket
+        </h3>
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10">
+          <!--Jacket Card - 1-->
+          <div class="p-5 rounded-3xl space-y-4 shadow-lg">
+            <img
+              class="rounded-3xl p-5 bg-[#f1f1f1]"
+              src="./images/jacket-4.png"
+              alt="jacket pic"
+            />
+            <p class="text-2xl font-bold">Snowboard Jacket</p>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+            <div class="flex items-center justify-between">
+              <p class="text-[#FABE4c] text-4xl font-black">$234</p>
+              <button
+                class="flex gap-2 bg-green-300 py-4 px-8 rounded-xl text-white font-medium bg-gradient-to-r from-[#A4BC46] to-[#85A019]"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-6 text-white"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
+                  />
+                </svg>
+
+                Buy Now
+              </button>
+            </div>
+          </div>
+           <!--Jacket Card - 2-->
+          <div class="p-5 rounded-3xl space-y-4 shadow-lg">
+            <img
+              class="rounded-3xl p-5 bg-[#f1f1f1]"
+              src="./images/jacket-5.png"
+              alt="jacket pic"
+            />
+            <p class="text-2xl font-bold">Leather Jacket</p>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+            <div class="flex items-center justify-between">
+              <p class="text-[#FABE4c] text-4xl font-black">$234</p>
+              <button
+                class="flex gap-2 bg-green-300 py-4 px-8 rounded-xl text-white font-medium bg-gradient-to-r from-[#A4BC46] to-[#85A019]"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-6 text-white"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
+                  />
+                </svg>
+
+                Buy Now
+              </button>
+            </div>
+          </div>
+          <!--Jacket Card - 3-->
+          <div class="p-5 rounded-3xl space-y-4 shadow-lg">
+            <img
+              class="rounded-3xl p-5 bg-[#f1f1f1]"
+              src="./images/jacket-6.png"
+              alt="jacket pic"
+            />
+            <p class="text-2xl font-bold">Casual Jacket</p>
+            <p>
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+            <div class="flex items-center justify-between">
+              <p class="text-[#FABE4C] text-4xl font-black">$234</p>
+              <button
+                class="flex gap-2 bg-green-300 py-4 px-8 rounded-xl text-white font-medium bg-gradient-to-r from-[#A4BC46] to-[#85A019]"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="size-6 text-white"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z"
+                  />
+                </svg>
+
+                Buy Now
+              </button>
+            </div>
+          </div>
         </div>
       </section>
+      <!--Last Section-->
+      <section
+        class="my-32 sm:mx-10 md:mx-10 lg:mx-0 lg:flex justify-between items-center gap-20"
+      >
+        <div class="lg:w-1/2 mb-20 lg:order-last">
+          <img src="./images/shopping.png" alt="shopping pic" />
+        </div>
+        <div class="lg:w-1/2 sm:mb-20 md:mb-20 lg:order-first">
+          <!--box-1-->
+          <div class="flex items-center gap-10 mb-10 p-8 rounded-md shadow-lg">
+            <div>
+              <img class="w-20" src="./icons/house.png" alt="house pic" />
+            </div>
+            <div>
+              <p class="text-2xl font-bold text-[#363958]">
+                Find the Perfect Fit
+              </p>
+              <p class="text-base font-normal text-[#3E3E3E]">
+                Everybody is different, which is why we offer styles for every
+                body.
+              </p>
+            </div>
+          </div>
+          <!--box-2-->
+          <div class="flex items-center gap-10 mb-10 p-8 rounded-md shadow-lg">
+            <div>
+              <img class="w-20" src="./icons/box.png" alt="box pic" />
+            </div>
+            <div>
+              <p class="text-2xl font-bold text-[#363958]">Free Exchanges</p>
+              <p class="text-base font-normal text-[#3E3E3E]">
+                One of the many reasons you can shop with peace of mind.
+              </p>
+            </div>
+          </div>
+          <!--box-3-->
+          <div class="flex items-center gap-10 p-8 rounded-md shadow-lg">
+            <div>
+              <img class="w-20" src="./icons/question.png" alt="question pic" />
+            </div>
+            <div>
+              <p class="text-2xl font-bold text-[#363958]">
+                Contact the Seller
+              </p>
+              <p class="text-base font-normal text-[#3E3E3E]">
+                They are here to help you. That's quite literally what we pay
+                them for.
+              </p>
+            </div>
+          </div>
+        </div>
+       </section>
     </main>
   </body>
+  <footer></footer>
   <body></body>
 </html>
